# extern_fn_generator

./: Cargo.toml
src/: lib.rs
