[package]
name = "extern_fn_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.10.0"
syn = { version = "2.0.66", features = ["full", "visit-mut"] }